# git_intro

./: .pre-commit-config.yaml  Readme.md  hello.py  pyproject.toml  setup.cfg  text.txt
.github/workflows/: code-checker.yaml
